--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "version": 2,
   "cleanUrls": true,
+  "trailingSlash": false,
   "framework": "vite",
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
